--- a/_includes/header.html
+++ b/_includes/header.html
@@ -81,7 +81,7 @@
     <div class="site__header-wrapper">
         <header class="site__header">
 
-            <a class="site__logo logo--status" href="/">
+            <a id="site__logo" class="site__logo logo--status" href="/">
                 <svg version="1.1"  xmlns="http://www.w3.org/2000/svg" style="display: none;">
                     <symbol id="logo--basic" viewBox="0 0 124 84">
                         <style>
@@ -94,7 +94,6 @@
                                 stroke-linejoin:round;
                                 stroke-miterlimit:10}
                         </style>
-                        <a href="/">
                         <path id="XMLID_363_" d="M82 2L62 22 42 2z"/>
                         <path id="XMLID_362_" class="bt0" d="M48 2h-6l20 20v-6z"/>
                         <path id="XMLID_361_" d="M76 2L62 16v6L82 2z"/>
@@ -107,38 +106,37 @@
                         <path id="XMLID_415_" class="bt2" d="M42 2H2l20 20h40z"/>
                         <path id="XMLID_414_" class="bt2" d="M82 2h40l-20 20H62z"/>
                         <path id="XMLID_413_" class="bt2" d="M48 62l14 20 14-20-14-40z"/>
-                        </a>
                     </symbol>
 
-                    <symbol id="logo--highlight" viewBox="0 0 124 84">
+                    <symbol id="logo--highlight" viewBox="0 0 372 252">
                         <style>
                             .ht0{fill:#8d8c8e}
-                            .ht1{fill:#69e3ff}
+                            .ht1{fill:#86aab3}
                             .ht2{fill:#a5eeff}
-                            .ht3{fill:#c3f4ff}
+                            .ht3{fill:#c9f5ff}
                             .ht4{fill:none;
                             stroke:#000;
-                            stroke-width:4;
+                            stroke-width:12;
                             stroke-linecap:round;
                             stroke-linejoin:round;
                             stroke-miterlimit:10}
                         </style>
-                        <path id="XMLID_51_" class="ht0" d="M122 2l-20 20H62L82 2h34z"/>
-                        <path id="XMLID_50_" class="ht0" d="M62 22H22L2 2h40z"/>
-                        <path id="XMLID_49_" class="ht1" d="M82 2L62 22v-8L74 2z"/>
-                        <path id="XMLID_48_" class="ht1" d="M74.1 56.7L76 62 62 82v-8z"/>
-                        <path id="XMLID_47_" class="ht2" d="M65 30.6l9.1 26.1L62 74v-.6L54 62l1.9-5.3L62 39.2z"/>
-                        <path id="XMLID_46_" class="ht2" d="M74 2L62 14 50 2z"/>
-                        <path id="XMLID_45_" class="ht3" d="M62 22l3 8.6-3 8.6z"/>
-                        <path id="XMLID_44_" class="ht3" d="M62 74v8L48 62l1.9-5.3L62 22v17.2l-6.1 17.5L54 62l8 11.4z"/>
-                        <path id="XMLID_43_" class="ht3" d="M62 14v8L42 2h8z"/>
-                        <path id="XMLID_41_" class="ht4" d="M82 2H42"/>
-                        <path id="XMLID_40_" class="ht4" d="M42 2H2l20 20h40z"/>
-                        <path id="XMLID_39_" class="ht4" d="M82 2h40l-20 20H62z"/>
-                        <path id="XMLID_38_" class="ht4" d="M62 22L49.9 56.7 48 62l14 20 14-20-1.9-5.3L65 30.6z"/>
+                        <path id="XMLID_451_" class="ht0" d="M366 6l-60 60H186l60-60h102z"/>
+                        <path id="XMLID_450_" class="ht0" d="M186 66H66L6 6h120z"/>
+                        <path id="XMLID_449_" class="ht1" d="M246 6l-60 60V42l36-36z"/>
+                        <path id="XMLID_448_" class="ht1" d="M222.4 170l5.6 16-42 60v-24z"/>
+                        <path id="XMLID_447_" class="ht2" d="M195 91.7l27.4 78.3-36.4 52v-1.7L162 186l5.6-16 18.4-52.6z"/>
+                        <path id="XMLID_446_" class="ht2" d="M222 6l-36 36-36-36z"/>
+                        <path id="XMLID_445_" class="ht3" d="M186 66l9 25.7-9 25.7z"/>
+                        <path id="XMLID_444_" class="ht3" d="M186 222v24l-42-60 5.6-16L186 66v51.4L167.6 170l-5.6 16 24 34.3z"/>
+                        <path id="XMLID_443_" class="ht3" d="M186 42v24L126 6h24z"/>
+                        <path id="XMLID_441_" class="ht4" d="M246 6H126"/>
+                        <path id="XMLID_440_" class="ht4" d="M126 6H6l60 60h120z"/>
+                        <path id="XMLID_439_" class="ht4" d="M246 6h120l-60 60H186z"/>
+                        <path id="XMLID_438_" class="ht4" d="M186 66l-36.4 104-5.6 16 42 60 42-60-5.6-16L195 91.7z"/>
                     </symbol>
 
-                    <symbol id="logo--at-home" viewBox="0 0 124 84">
+                    <symbol id="logo--at-home" viewBox="0 0 372 252">
                         <style>
                             .st0{fill:#8d8c8e}
                             .st1{fill:#357280}
@@ -146,39 +144,39 @@
                             .st3{fill:#a5eeff}
                             .st4{fill:none;
                             stroke:#000;
-                            stroke-width:4;
+                            stroke-width:12;
                             stroke-linecap:round;
                             stroke-linejoin:round;
                             stroke-miterlimit:10}
                         </style>
-                        <path id="XMLID_451_" class="st0" d="M122 2l-20 20H62L82 2h34z"/>
-                        <path id="XMLID_450_" class="st0" d="M62 22H22L2 2h40z"/>
-                        <path id="XMLID_449_" class="st1" d="M82 2L62 22v-8L74 2z"/>
-                        <path id="XMLID_448_" class="st1" d="M74.1 56.7L76 62 62 82v-8z"/>
-                        <path id="XMLID_447_" class="st2" d="M65 30.6l9.1 26.1L62 74v-.6L54 62l1.9-5.3L62 39.2z"/>
-                        <path id="XMLID_446_" class="st2" d="M74 2L62 14 50 2z"/>
-                        <path id="XMLID_445_" class="st3" d="M62 22l3 8.6-3 8.6z"/>
-                        <path id="XMLID_444_" class="st3" d="M62 74v8L48 62l1.9-5.3L62 22v17.2l-6.1 17.5L54 62l8 11.4z"/>
-                        <path id="XMLID_443_" class="st3" d="M62 14v8L42 2h8z"/>
-                        <path id="XMLID_441_" class="st4" d="M82 2H42"/>
-                        <path id="XMLID_440_" class="st4" d="M42 2H2l20 20h40z"/>
-                        <path id="XMLID_439_" class="st4" d="M82 2h40l-20 20H62z"/>
-                        <path id="XMLID_438_" class="st4" d="M62 22L49.9 56.7 48 62l14 20 14-20-1.9-5.3L65 30.6z"/>
+                        <path id="XMLID_451_" class="st0" d="M366 6l-60 60H186l60-60h102z"/>
+                        <path id="XMLID_450_" class="st0" d="M186 66H66L6 6h120z"/>
+                        <path id="XMLID_449_" class="st1" d="M246 6l-60 60V42l36-36z"/>
+                        <path id="XMLID_448_" class="st1" d="M222.4 170l5.6 16-42 60v-24z"/>
+                        <path id="XMLID_447_" class="st2" d="M195 91.7l27.4 78.3-36.4 52v-1.7L162 186l5.6-16 18.4-52.6z"/>
+                        <path id="XMLID_446_" class="st2" d="M222 6l-36 36-36-36z"/>
+                        <path id="XMLID_445_" class="st3" d="M186 66l9 25.7-9 25.7z"/>
+                        <path id="XMLID_444_" class="st3" d="M186 222v24l-42-60 5.6-16L186 66v51.4L167.6 170l-5.6 16 24 34.3z"/>
+                        <path id="XMLID_443_" class="st3" d="M186 42v24L126 6h24z"/>
+                        <path id="XMLID_441_" class="st4" d="M246 6H126"/>
+                        <path id="XMLID_440_" class="st4" d="M126 6H6l60 60h120z"/>
+                        <path id="XMLID_439_" class="st4" d="M246 6h120l-60 60H186z"/>
+                        <path id="XMLID_438_" class="st4" d="M186 66l-36.4 104-5.6 16 42 60 42-60-5.6-16L195 91.7z"/>
                     </symbol>
                 </svg>
                 <!-- use the symbols here -->
                 {% if page.title != "Home" %}
-                    <svg class="logo--basic" viewBox="0 0 124 84">
+                    <svg id="logo--basic" class="logo--basic" viewBox="0 0 124 84">
                         <use xlink:href="#logo--basic"></use>
                     </svg>
                 {% else %}
-                    <svg class="logo--at-home" viewBox="0 0 124 84">
+                    <svg class="logo--at-home" viewBox="0 0 372 252">
                         <use xlink:href="#logo--at-home"></use>
                     </svg>
                 {% endif %}
 
                 <!-- logo highlight logic in CSS file-->
-                <svg class="logo--highlight" viewBox="0 0 124 84">
+                <svg id="logo--highlight" class="logo--highlight" viewBox="0 0 372 252">
                     <use xlink:href="#logo--highlight"></use>
                 </svg>
             </a>
