--- a/_assets/stylesheets/_trumps.show-hide.scss
+++ b/_assets/stylesheets/_trumps.show-hide.scss
@@ -2,6 +2,14 @@
 // trumps - show/hide
 //
 
+.preload {
+    transition: none !important;
+}
+
+.is-invisible {
+    visibility: hidden;
+}
+
 .is-hidden {
     display: none;
 }
@@ -16,19 +24,23 @@
     animation-fill-mode: forwards;
 }
 
+// Need both height and display property to make them disappear completely
 @keyframes fadeout {
     0% {
         display: block;
+        height: 100%;
         opacity: 1;
     }
 
     99% {
-        display: block;
+        display: none;
+        height: 1%;
         opacity: 0;
     }
 
     100% {
         display: none;
+        height: 0;
         opacity: 0;
     }
 }
