--- a/_assets/stylesheets/_components.site-nav.scss
+++ b/_assets/stylesheets/_components.site-nav.scss
@@ -43,17 +43,32 @@
         margin: 20px auto 0;
         //set z-index so that it is above the other elements, not behind
         z-index: 100;
+        -webkit-transition: all 2s ease-in-out;
         transition: all 2s ease-in-out;
 
         &.site__logo--hero {
-            display: inline-block;
-            width: 372px;
-            height: 252px;
-            position: fixed;
-            left: 0; right: 0;
-            margin: 0 auto;
-            top: 50%;
-            transform: translateY(-50%);
+            @media (min-width: 721px) {
+                display: inline-block;
+                width: 372px;
+                height: 252px;
+                position: fixed;
+                top: 50%;
+                left: 0; right: 0;
+                margin: -126px auto 0;
+              //  -webkit-transform: translateY(-50%);
+            //    transform: translateY(-50%);
+            }
+            @media (max-width: 720px) {
+                display: inline-block;
+                width: 248px;
+                height: 168px;
+                position: fixed;
+                top: 50%;
+                left: 0; right: 0;
+                margin: -84px auto 0;
+             //   -webkit-transform: translateY(-50%);
+              //  transform: translateY(-50%);
+            }
         }
     }
 
