General code cleanup.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,9 +53,11 @@
     <meta name="msapplication-config" content="{{ '/static/images/favicons/browserconfig.xml' | prepend: site.baseurl }}">
     <meta name="theme-color" content="#ffffff">
 
+
     <script src="{{ '/js/pre-script.js' | prepend: site.baseurl }}"></script>
 
   </head>
+
   <body>
     <div class="svg-icons">
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" style="display:none">
@@ -181,7 +183,7 @@
                 </svg>
             </a>
 
-            <!-- hamburger menu goes here; id for JS getElementByID-->
+            <!-- hamburger menu goes here; id for JS getElementById-->
             <div id="hamburger-wrapper" class="hamburger-wrapper">
                 <span class="hamburger"></span>
             </div>
@@ -194,4 +196,4 @@
             </div>
 
          </header>
-    </div> <!-- end .site__wrapper -->
+    </div> <!-- end nav section -->
