Fix github icon display issue.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,12 +2,12 @@
     <div class="footer">
         <div class="link-icons">
             <a class="icon-links" href="//github.com/timolawl" alt="Tim Chiang's GitHub Page">
-                <svg class="icon icon-github">
+                <svg class="icon icon-gh">
                     <use xlink:href="#icon-github"></use>
                 </svg>
             </a>
             <a class="icon-links" href="//codepen.io/timchiang" alt="Tim Chiang's Codepen Page">
-                <svg class="icon icon-codepen">
+                <svg class="icon icon-cp">
                     <use xlink:href="#icon-codepen"></use>
                 </svg>
             </a>
