--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,9 +23,9 @@
     <link rel="dns-prefetch" href="//freecodecamp.com" />
 
 
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat|Istok+Web" />
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Montserrat|Istok+Web" />
     <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}" />
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
+    <link rel="canonical" href="{{ page.url | replace:'index.html', '' | prepend: site.baseurl | prepend: site.url }}" />
 <!--
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 -->
