--- a/_includes/header.html
+++ b/_includes/header.html
@@ -185,7 +185,7 @@
 
             <!-- hamburger menu goes here; id for JS getElementById-->
             <div id="hamburger-wrapper" class="hamburger-wrapper">
-                <span class="hamburger"></span>
+                <div class="hamburger"></div>
             </div>
 
             <!-- the nav-wrapper covers the hamburger-wrapper and since it
