--- a/_assets/stylesheets/_components.site-nav.scss
+++ b/_assets/stylesheets/_components.site-nav.scss
@@ -172,6 +172,10 @@
 .site__logo*/
 
 .nav-wrapper {
+    -ms-user-select: none; // for removing double-click highlights
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
     display: inline-block;
     margin: 0 auto;
     overflow: hidden;
@@ -253,12 +257,14 @@
         position: absolute;
         top: 0;
         right: 5%;
-        cursor: pointer;
     }
 
     .hamburger {
+        border: none;
+        outline: none;
+        cursor: pointer;
         z-index: 200;  //needed because nav-wrapper covers the area.
-        display: block;
+      //  display: block;
         margin: auto;
         position: relative;
         width: 25px;
