--- a/_assets/stylesheets/_components.page-body.scss
+++ b/_assets/stylesheets/_components.page-body.scss
@@ -165,18 +165,25 @@
        right: 0;
        width: 100%;
        height: 100%;
-       padding-top: 25%;
+       padding-top: 27%;
+       @media (min-width: 421px) and (max-width: 980px) {
+         padding-top: calc(50% - 90px);
+       }
        text-align: center;
        background-color: rgba(0,0,0,0.85);
        color: white;
     //   transition: opacity 1000ms ease;
        opacity: 0;
-       z-index: 1000;
+       z-index: 10;
 
        &:hover {
          opacity: 1;
        }
    }
+}
+
+br {
+    line-height: 0.5rem;
 }
 
 .caption {
@@ -185,6 +192,11 @@
         display: block;
         font-family: Montserrat;
         font-size: 1rem;
+        @media (min-width: 421px) and (max-width: 980px) {
+            font-size: 1.3rem;
+        }
+
+
 
       //  font-weight: bold;
     }
@@ -200,11 +212,14 @@
         display: block;
         color: $secondary-light;
         font-size: 0.8rem;
+        @media (min-width: 421px) and (max-width: 980px) {
+            font-size: 0.9rem;
+        }
     }
 }
 
 
-@media (max-width: 400px) {
+@media (max-width: 420px) {
     [class^='grid-'] {
         width: 90% !important;
         margin-left: 5%;
@@ -212,7 +227,7 @@
 }
 
 
-@media (min-width: 401px) and (max-width: 820px) {
+@media (min-width: 421px) and (max-width: 820px) {
     [class^='grid-'] {
         width: 100% !important;
     }
