Add RecipeBox portfolio project

--- a/_assets/stylesheets/_components.site-nav.scss
+++ b/_assets/stylesheets/_components.site-nav.scss
@@ -80,6 +80,8 @@
 
         font-family: $font-stack-header;
         font-size: 1.2rem;
+      //  font-weight: bold;
+       // letter-spacing: 0.0175rem;
         text-transform: uppercase;
 
         ul {
