--- a/_assets/stylesheets/_base.type.scss
+++ b/_assets/stylesheets/_base.type.scss
@@ -18,7 +18,9 @@
 
 html {
     font-family: $font-stack-body;
+    -ms-text-size-adjust: none;
     -webkit-text-size-adjust: none;
+   // -webkit-filter: blur(0); // removes the fuzzy font for chrome
   //  -webkit-font-smoothing: antialiased;
   //  -moz-osx-font-smoothing: grayscale;
     //this actually messed up my spacing in chrome - don't use
