--- a/_assets/stylesheets/_components.page-body.scss
+++ b/_assets/stylesheets/_components.page-body.scss
@@ -17,6 +17,11 @@
         max-width: 960px;
     }
 
+    @media (min-width: 1220px) {
+        width: 100%;
+        max-width: none;
+    }
+
     &__header {
         text-align: center;
         margin-bottom: 2rem;
@@ -121,8 +126,12 @@
         -moz-user-select: none;
         -webkit-user-select: none;
         user-select: none;
-        @media (min-width: 821px) and (max-width: 980px) {
+        max-width: none; // set no limit for portfolio section.
+        @media (min-width: 821px) and (max-width: 1220px) {
             width: 800px;
+        }
+        @media (min-width: 1221px) {
+            width: 1200px;
         }
     }
 
@@ -166,7 +175,7 @@
         width: 100%;
         height: 100%;
         padding-top: 27%;
-        @media (min-width: 421px) and (max-width: 980px) {
+        @media (min-width: 421px) and (max-width: 980px), (min-width: 1220px) {
           padding-top: calc(50% - 90px);
         }
         text-align: center;
@@ -190,7 +199,7 @@
         font-size: 1.1rem;
         font-weight: bold;
         letter-spacing: 0.015rem;
-        @media (min-width: 421px) and (max-width: 980px) {
+        @media (min-width: 421px) and (max-width: 980px), (min-width: 1220px) {
             font-size: 1.4rem;
             letter-spacing: 0.02rem;
         }
@@ -207,7 +216,7 @@
         display: block;
         color: $secondary-light;
         font-size: 0.8rem;
-        @media (min-width: 421px) and (max-width: 980px) {
+        @media (min-width: 421px) and (max-width: 980px), (min-width: 1220px) {
             font-size: 0.9rem;
         }
     }
@@ -306,6 +315,8 @@
 // specific styling to the notes page
 .notepad {
     width: 100%;
+    margin: 0 auto;
+    max-width: 960px;
     height: 100vh;
     background: linear-gradient(to bottom, #a5eeff 0%, #fff 100%);
     padding: 1rem;
