--- a/_assets/stylesheets/_base.page.scss
+++ b/_assets/stylesheets/_base.page.scss
@@ -21,3 +21,7 @@ footer {
     width: 100%;
     margin: 150px auto 50px;
 }
+
+p { // this is for spacing paragraphs in the about section.
+    margin-bottom: 1rem;
+}
