--- a/_assets/stylesheets/_components.page-body.scss
+++ b/_assets/stylesheets/_components.page-body.scss
@@ -93,6 +93,10 @@
         max-width: 760px;
         margin: 0 auto;
         text-align: justify;
+
+        p {
+            margin-bottom: 1rem;
+        }
     }
 }
 
