--- a/_assets/stylesheets/_trumps.show-hide.scss
+++ b/_assets/stylesheets/_trumps.show-hide.scss
@@ -14,6 +14,10 @@
     display: none;
 }
 
+.is-opacity-visible {  // for portfolio image loading
+    opacity: 1 !important;
+}
+
 .is-offscreen {
     position: fixed;
     left: -1000px;
