Refactor code for the sequential loading of images

--- a/_assets/stylesheets/_trumps.show-hide.scss
+++ b/_assets/stylesheets/_trumps.show-hide.scss
@@ -14,8 +14,8 @@
     display: none;
 }
 
-.is-opacity-visible {  // for portfolio image loading
-    opacity: 1 !important;
+.is-opacity-invisible {  // for portfolio image loading
+    opacity: 0 !important;
 }
 
 .is-offscreen {
