--- a/_includes/header.html
+++ b/_includes/header.html
@@ -181,7 +181,7 @@
                 <svg id="logo--highlight" class="logo--highlight" viewBox="0 0 372 252">
                     <use xlink:href="#logo--highlight"></use>
                 </svg>
-            </a>
+            </a> <!-- end link -->
 
             <!-- hamburger menu goes here; id for JS getElementById-->
             <div id="hamburger-wrapper" class="hamburger-wrapper">
