--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,17 @@
   <footer>
     <div class="footer">
         <div class="link-icons">
-            <a class="icon-links" href="//github.com/timolawl" alt="Tim Chiang's GitHub Page">
+            <a class="icon-links" href="//github.com/timolawl" title='GitHub' alt="Tim Chiang's GitHub Page">
                 <svg class="icon icon-gh">
                     <use xlink:href="#icon-github"></use>
                 </svg>
             </a>
-            <a class="icon-links" href="//codepen.io/timchiang" alt="Tim Chiang's Codepen Page">
+            <a class="icon-links" href="//codepen.io/timchiang" title='Codepen' alt="Tim Chiang's Codepen Page">
                 <svg class="icon icon-cp">
                     <use xlink:href="#icon-codepen"></use>
                 </svg>
             </a>
-            <a class="icon-links" href="//freecodecamp.com/timolawl" alt="Tim Chiang's Free Code Camp Page">
+            <a class="icon-links" href="//freecodecamp.com/timolawl" title='Free Code Camp' alt="Tim Chiang's Free Code Camp Page">
                 <svg class="icon icon-fcc">
                     <use xlink:href="#icon-fcc"></use>
                 </svg>
