Add twitter to footer icon links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,11 @@
   <footer>
     <div class="footer">
         <div class="link-icons">
+            <a class="icon-links" href="//twitter.com/timolawl" title='Twitter' alt="Tim Chiang's Twitter Page">
+                <svg class="icon icon-twit">
+                    <use xlink:href="#icon-twitter"></use>
+                </svg>
+            </a>
             <a class="icon-links" href="//github.com/timolawl" title='GitHub' alt="Tim Chiang's GitHub Page">
                 <svg class="icon icon-gh">
                     <use xlink:href="#icon-github"></use>
