--- a/_includes/header.html
+++ b/_includes/header.html
@@ -61,6 +61,10 @@
   <body>
     <div class="svg-icons">
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" style="display:none">
+            <symbol id="icon-twitter" viewBox="0 0 16 16">
+                <title>Twitter</title>
+                <path d="M14.8 4.3c-.5.2-1 .4-1.6.4.6-.3 1-.9 1.2-1.5-.5.3-1.1.6-1.8.7-.5-.5-1.2-.9-2-.9-1.5 0-2.8 1.2-2.8 2.8 0 .2 0 .4.1.6-2.3-.1-4.4-1.2-5.8-2.9-.2.4-.3.9-.3 1.4 0 1 .5 1.8 1.2 2.3-.5 0-.9-.1-1.3-.3 0 1.4 1 2.5 2.2 2.7-.2.1-.4.1-.7.1-.2 0-.4 0-.5-.1.4 1.1 1.4 1.9 2.6 1.9-1 .8-2.2 1.2-3.5 1.2h-.7c1.3.9 2.8 1.3 4.4 1.3 5.2 0 8-4.3 8-8v-.4c.5-.3 1-.8 1.3-1.3z"/>
+            </symbol>
             <symbol id="icon-github" viewBox="0 0 512 512">
                 <title>GitHub</title>
                 <path id="XMLID_2_" d="M256,0C114.6,0,0,114.6,0,256c0,113.1,73.4,209.1,175.1,242.9c12.8,2.4,17.5-5.6,17.5-12.3c0-6.1-0.2-26.3-0.3-47.7C121,454.4,106,408.7,106,408.7c-11.6-29.6-28.4-37.5-28.4-37.5c-23.2-15.9,1.8-15.6,1.8-15.6c25.7,1.8,39.2,26.4,39.2,26.4c22.8,39.1,59.9,27.8,74.5,21.3c2.3-16.5,8.9-27.8,16.3-34.2c-56.9-6.5-116.6-28.4-116.6-126.5c0-27.9,10-50.8,26.4-68.7c-2.7-6.4-11.4-32.5,2.5-67.8c0,0,21.5-6.9,70.4,26.2c20.4-5.7,42.3-8.5,64.1-8.6c21.8,0.1,43.7,2.9,64.1,8.6c48.9-33.1,70.3-26.2,70.3-26.2c13.9,35.3,5.2,61.3,2.5,67.8c16.4,17.9,26.3,40.8,26.3,68.7c0,98.3-59.9,120-116.9,126.3c9.2,7.9,17.4,23.5,17.4,47.4c0,34.3-0.3,61.8-0.3,70.3c0,6.8,4.6,14.8,17.6,12.3C438.7,465,512,369.1,512,256C512,114.6,397.4,0,256,0L256,0z"/>
