Replace Note section with Blog section. Testing dq

--- a/_assets/stylesheets/_components.post.scss
+++ b/_assets/stylesheets/_components.post.scss
@@ -23,5 +23,9 @@
     &__content {
      //   text-indent: 1em;
         text-align: justify;
+
+        p {
+            padding-bottom: 1rem;
+        }
     }
 }
