Fix logo (long piece shadow was too thin).

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -125,10 +125,10 @@
                         <path id="XMLID_451_" class="ht0" d="M366 6l-60 60H186l60-60h102z"/>
                         <path id="XMLID_450_" class="ht0" d="M186 66H66L6 6h120z"/>
                         <path id="XMLID_449_" class="ht1" d="M246 6l-60 60V42l36-36z"/>
-                        <path id="XMLID_448_" class="ht1" d="M222.4 170l5.6 16-42 60v-24z"/>
-                        <path id="XMLID_447_" class="ht2" d="M195 91.7l27.4 78.3-36.4 52v-1.7L162 186l5.6-16 18.4-52.6z"/>
+                        <path id="XMLID_448_" class="ht1" d="M222 168.8l6 17.2-42 60v-25.7z"/>
+                        <path id="XMLID_447_" class="ht2" d="M195 91.7l27 77.1-36 51.5L162 186l5.6-16 18.4-52.6z"/>
                         <path id="XMLID_446_" class="ht2" d="M222 6l-36 36-36-36z"/>
-                        <path id="XMLID_445_" class="ht3" d="M186 66l9 25.7-9 25.7z"/>
+                        <path id="XMLID_445_" class="ht3" d="M186 66l9 25.7-9 25.7z"/> 1.7
                         <path id="XMLID_444_" class="ht3" d="M186 222v24l-42-60 5.6-16L186 66v51.4L167.6 170l-5.6 16 24 34.3z"/>
                         <path id="XMLID_443_" class="ht3" d="M186 42v24L126 6h24z"/>
                         <path id="XMLID_441_" class="ht4" d="M246 6H126"/>
@@ -153,10 +153,10 @@
                         <path id="XMLID_451_" class="st0" d="M366 6l-60 60H186l60-60h102z"/>
                         <path id="XMLID_450_" class="st0" d="M186 66H66L6 6h120z"/>
                         <path id="XMLID_449_" class="st1" d="M246 6l-60 60V42l36-36z"/>
-                        <path id="XMLID_448_" class="st1" d="M222.4 170l5.6 16-42 60v-24z"/>
-                        <path id="XMLID_447_" class="st2" d="M195 91.7l27.4 78.3-36.4 52v-1.7L162 186l5.6-16 18.4-52.6z"/>
+                        <path id="XMLID_448_" class="st1" d="M222 168.8l6 17.2-42 60v-25.7z"/>
+                        <path id="XMLID_447_" class="st2" d="M195 91.7l27 77.1-36 51.5L162 186l5.6-16 18.4-52.6z"/>
                         <path id="XMLID_446_" class="st2" d="M222 6l-36 36-36-36z"/>
-                        <path id="XMLID_445_" class="st3" d="M186 66l9 25.7-9 25.7z"/>
+                        <path id="XMLID_445_" class="st3" d="M186 66l9 25.7-9 25.7z"/> 1.7
                         <path id="XMLID_444_" class="st3" d="M186 222v24l-42-60 5.6-16L186 66v51.4L167.6 170l-5.6 16 24 34.3z"/>
                         <path id="XMLID_443_" class="st3" d="M186 42v24L126 6h24z"/>
                         <path id="XMLID_441_" class="st4" d="M246 6H126"/>
