Format all classes to '.is-' format.

--- a/_assets/stylesheets/_trumps.show-hide.scss
+++ b/_assets/stylesheets/_trumps.show-hide.scss
@@ -9,7 +9,7 @@
 }
 
 
-.preload { // 2. Logo animation: Added to logo to prevent animation from occuring on landing page. Removed after page finishes loading.
+.is-preloading { // 2. Logo animation: Added to logo to prevent animation from occuring on landing page. Removed after page finishes loading.
     transition: none !important;
 }
 
