--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,4 +5,4 @@
 
 <script src="{{ '/js/post-script.js' | prepend: site.baseurl }}"></script>
 
-<script src="//www.google-analytics.com/analytics.js" async defer></script>
+<script src="https://www.google-analytics.com/analytics.js" async defer></script>
