Add Stack Overflow profile link to footer link bar

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,6 +21,11 @@
                     <use xlink:href="#icon-fcc"></use>
                 </svg>
             </a>
+            <a class="icon-links" href="https://stackoverflow.com/users/5812121/timolawl" title='Stack Overflow' alt="Tim Chiang's Stack Overflow page">
+                <svg class="icon icon-so">
+                    <use xlink:href="#icon-so"></use>
+                </svg>
+            </a>
         </div>
         <span class="copyright">&copy; {{ site.time | date: '%Y' }} Tim Chiang, unless otherwise noted.</span>
     </div>
