--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
   <footer>
     <div class="footer">
         <div class="link-icons">
-            <a class="icon-links" href="https://twitter.com/timolawl" title='Twitter' alt="Tim Chiang's Twitter Page">
+            <a class="icon-links" href="https://twitter.com/tim_chiang" title='Twitter' alt="Tim Chiang's Twitter Page">
                 <svg class="icon icon-twit">
                     <use xlink:href="#icon-twitter"></use>
                 </svg>
