--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,8 +1,12 @@
 <script>
-    window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-    ga('create','UA-72590422-1','auto');ga('send','pageview')
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-72590422-1', 'auto');
+  ga('send', 'pageview');
+
 </script>
 
 <script src="{{ '/js/post-script.js' | prepend: site.baseurl }}"></script>
-
-<script src="https://www.google-analytics.com/analytics.js" async defer></script>
