--- a/_assets/stylesheets/_components.page-body.scss
+++ b/_assets/stylesheets/_components.page-body.scss
@@ -185,6 +185,8 @@
         @media (min-width: 421px) and (max-width: 980px), (min-width: 1220px) {
           padding-top: calc(50% - 90px);
         }
+        padding-left: 1rem;
+        padding-right: 1rem;
         text-align: center;
         background-color: rgba(0,0,0,0.85);
         color: white;
