Set proper width for the home page on mobile

--- a/_assets/stylesheets/_components.page-body.scss
+++ b/_assets/stylesheets/_components.page-body.scss
@@ -38,6 +38,9 @@
     }
 
     &__content {
+        width: 90%;
+        margin: 0 auto;
+
         @media (min-width: 1281px) {
       //      font-size: 2vmin;
         }
