--- a/_includes/header.html
+++ b/_includes/header.html
@@ -71,11 +71,12 @@
             </symbol>
             <symbol id="icon-codepen" viewBox="0 0 512 512">
                 <title>Codepen</title>
-                <path d="M488.9,168l-224-149.3c-5.4-3.6-12.4-3.6-17.8,0L23.1,168c-4.5,3-7.1,8-7.1,13.3v149.3c0,5.4,2.7,10.3,7.1,13.3l224,149.3c2.7,1.8,5.8,2.7,8.9,2.7s6.2-0.9,8.9-2.7l224-149.3c4.5-3,7.1-8,7.1-13.3V181.3C496,176,493.3,171,488.9,168L488.9,168z M256,311.4L172.8,256l83.2-55.4l83.2,55.4L256,311.4z M272,172.8V61.9l179.2,119.4L368,236.8L272,172.8z M240,172.8l-96,64l-83.2-55.4L240,61.9V172.8z M115.2,256L48,300.8v-89.5L115.2,256z M144,275.2l96,64v110.9L60.8,330.7C60.8,330.7,144,275.2,144,275.2z M272,339.2l96-64l83.2,55.4L272,450.1V339.2z M396.8,256l67.2-44.8v89.5L396.8,256z"/></path>
+                <path d="M488.9,168l-224-149.3c-5.4-3.6-12.4-3.6-17.8,0L23.1,168c-4.5,3-7.1,8-7.1,13.3v149.3c0,5.4,2.7,10.3,7.1,13.3l224,149.3c2.7,1.8,5.8,2.7,8.9,2.7s6.2-0.9,8.9-2.7l224-149.3c4.5-3,7.1-8,7.1-13.3V181.3C496,176,493.3,171,488.9,168L488.9,168z M256,311.4L172.8,256l83.2-55.4l83.2,55.4L256,311.4z M272,172.8V61.9l179.2,119.4L368,236.8L272,172.8z M240,172.8l-96,64l-83.2-55.4L240,61.9V172.8z M115.2,256L48,300.8v-89.5L115.2,256z M144,275.2l96,64v110.9L60.8,330.7C60.8,330.7,144,275.2,144,275.2z M272,339.2l96-64l83.2,55.4L272,450.1V339.2z M396.8,256l67.2-44.8v89.5L396.8,256z"/>
             </symbol>
             <symbol id="icon-fcc" viewBox="0 0 512 512">
                 <title>Free Code Camp</title>
-                <path d="M210.4 106.4s18.4 12.8 18.4 35.8c0 39.7-53.7 83.9-53.7 125 0 44.6 33.9 73.7 66.9 82.5 4.5 1.1 6.6-4.4 1-5.8-13.3-3.3-28.2-20.8-28.2-48.2 0-25.2 24.3-35 34.2-47.4 10-12.5 7.7-28.6 1.8-33.2-5.8-4.7-1.9-10.9 8.7-3.4 10.7 7.4 19.2 21.2 16.1 34.4-4.1 16.8 1.2 26.4 10 27.7 8.8 1.2 18.4-3.2 17.5-11.3-1-8.1-5.8-16.7-2.9-16.7 6.2 0 19.4 15.4 19.4 39.7 0 24.4-20.1 41.4-26.2 47.8-3.7 3.9 1.2 8.8 6.2 6.6 2.6-1.1 8-4.3 11.3-6.6 15.9-11.4 40.7-34.3 40.7-76.8 0-44.5-16.9-64.4-33.8-81.1-16.9-16.7-21.3-12.4-16.5-4.3 14.6 24.9 5.8 33.3-4.9 33.3-12.4 0-13.1-28.2-17.9-49.7-10.7-47.8-53.7-55.9-62-56.3-8.6-.9-15.7 3.7-6.1 8zM0 249c0-54.7 19-103.4 56.9-146.4C70.8 87 81.6 79 89.2 79c2.9 0 5.4 1.1 7.7 3.2s3.4 4.4 3.4 7.2c0 4-4.8 10.6-14.6 20-39.6 38.1-59.4 85.2-59.4 141.3 0 62.2 20.5 112.9 61.6 152.1 8.2 7.8 12.4 14.2 12.4 18.9 0 3-1.1 5.6-3.4 7.8s-4.8 3.4-7.8 3.4c-9.5 0-22.9-11.2-40.4-33.3C16.2 358.1 0 308 0 249zM512 262.8c0 54.8-19 103.5-56.9 146.5-13.9 15.7-24.7 23.7-32.3 23.7-2.9 0-5.4-1.1-7.7-3.2s-3.4-4.5-3.4-7.3c0-3.9 4.8-10.5 14.6-19.8 39.6-38 59.4-85.1 59.4-141.4 0-62.1-20.5-112.9-61.6-152.1-8.2-7.8-12.4-14-12.4-18.6 0-3 1.1-5.6 3.4-8 2.2-2.3 4.8-3.4 7.8-3.4 9.3 0 22.7 11.2 40.3 33.5 32.4 41.5 48.8 91.6 48.8 150.1zM385.2 406.2H145.1c-7.8 0-14.3-6.3-14.3-14.3s6.3-14.3 14.3-14.3h240.1c7.8 0 14.3 6.3 14.3 14.3 0 7.9-6.5 14.3-14.3 14.3z"/>                       </symbol>
+                <path d="M210.4 106.4s18.4 12.8 18.4 35.8c0 39.7-53.7 83.9-53.7 125 0 44.6 33.9 73.7 66.9 82.5 4.5 1.1 6.6-4.4 1-5.8-13.3-3.3-28.2-20.8-28.2-48.2 0-25.2 24.3-35 34.2-47.4 10-12.5 7.7-28.6 1.8-33.2-5.8-4.7-1.9-10.9 8.7-3.4 10.7 7.4 19.2 21.2 16.1 34.4-4.1 16.8 1.2 26.4 10 27.7 8.8 1.2 18.4-3.2 17.5-11.3-1-8.1-5.8-16.7-2.9-16.7 6.2 0 19.4 15.4 19.4 39.7 0 24.4-20.1 41.4-26.2 47.8-3.7 3.9 1.2 8.8 6.2 6.6 2.6-1.1 8-4.3 11.3-6.6 15.9-11.4 40.7-34.3 40.7-76.8 0-44.5-16.9-64.4-33.8-81.1-16.9-16.7-21.3-12.4-16.5-4.3 14.6 24.9 5.8 33.3-4.9 33.3-12.4 0-13.1-28.2-17.9-49.7-10.7-47.8-53.7-55.9-62-56.3-8.6-.9-15.7 3.7-6.1 8zM0 249c0-54.7 19-103.4 56.9-146.4C70.8 87 81.6 79 89.2 79c2.9 0 5.4 1.1 7.7 3.2s3.4 4.4 3.4 7.2c0 4-4.8 10.6-14.6 20-39.6 38.1-59.4 85.2-59.4 141.3 0 62.2 20.5 112.9 61.6 152.1 8.2 7.8 12.4 14.2 12.4 18.9 0 3-1.1 5.6-3.4 7.8s-4.8 3.4-7.8 3.4c-9.5 0-22.9-11.2-40.4-33.3C16.2 358.1 0 308 0 249zM512 262.8c0 54.8-19 103.5-56.9 146.5-13.9 15.7-24.7 23.7-32.3 23.7-2.9 0-5.4-1.1-7.7-3.2s-3.4-4.5-3.4-7.3c0-3.9 4.8-10.5 14.6-19.8 39.6-38 59.4-85.1 59.4-141.4 0-62.1-20.5-112.9-61.6-152.1-8.2-7.8-12.4-14-12.4-18.6 0-3 1.1-5.6 3.4-8 2.2-2.3 4.8-3.4 7.8-3.4 9.3 0 22.7 11.2 40.3 33.5 32.4 41.5 48.8 91.6 48.8 150.1zM385.2 406.2H145.1c-7.8 0-14.3-6.3-14.3-14.3s6.3-14.3 14.3-14.3h240.1c7.8 0 14.3 6.3 14.3 14.3 0 7.9-6.5 14.3-14.3 14.3z"/>
+            </symbol>
             <symbol id='icon-so' viewBox="0 0 512 512">
                 <title>Stack Overflow</title>
                 <path d="M448,296v144H64V296h48v96h288v-96H448z M136,320h240v48H136V320z M141.7,268l10.4-46.9l234.3,51.9L376,320L141.7,268z M168.9,171.7l20.3-43.5l217.5,101.4l-20.3,43.5L168.9,171.7z M435.9,191.6l-29.2,38.1L216.3,83.5L237.4,56h21.8L435.9,191.6z"/>
@@ -99,18 +100,18 @@
                                 stroke-linejoin:round;
                                 stroke-miterlimit:10}
                         </style>
-                        <path id="XMLID_363_" d="M82 2L62 22 42 2z"/>
-                        <path id="XMLID_362_" class="bt0" d="M48 2h-6l20 20v-6z"/>
-                        <path id="XMLID_361_" d="M76 2L62 16v6L82 2z"/>
-                        <path id="XMLID_360_" d="M62 22l14 40-14 20-14-20z"/>
-                        <path id="XMLID_359_" d="M74.1 56.7L62 74v8l14-20z"/>
-                        <path id="XMLID_358_" class="bt0" d="M49.9 56.7L48 62l14 20v-8z"/>
-                        <path id="XMLID_419_" class="bt1" d="M122 2l-20 20H62L82 2h34z"/>
-                        <path id="XMLID_418_" class="bt1" d="M62 22H22L2 2h40z"/>
-                        <path id="XMLID_416_" class="bt2" d="M82 2H42"/>
-                        <path id="XMLID_415_" class="bt2" d="M42 2H2l20 20h40z"/>
-                        <path id="XMLID_414_" class="bt2" d="M82 2h40l-20 20H62z"/>
-                        <path id="XMLID_413_" class="bt2" d="M48 62l14 20 14-20-14-40z"/>
+                        <path d="M82 2L62 22 42 2z"/>
+                        <path class="bt0" d="M48 2h-6l20 20v-6z"/>
+                        <path d="M76 2L62 16v6L82 2z"/>
+                        <path d="M62 22l14 40-14 20-14-20z"/>
+                        <path d="M74.1 56.7L62 74v8l14-20z"/>
+                        <path class="bt0" d="M49.9 56.7L48 62l14 20v-8z"/>
+                        <path class="bt1" d="M122 2l-20 20H62L82 2h34z"/>
+                        <path class="bt1" d="M62 22H22L2 2h40z"/>
+                        <path class="bt2" d="M82 2H42"/>
+                        <path class="bt2" d="M42 2H2l20 20h40z"/>
+                        <path class="bt2" d="M82 2h40l-20 20H62z"/>
+                        <path class="bt2" d="M48 62l14 20 14-20-14-40z"/>
                     </symbol>
 
                     <symbol id="logo--highlight" viewBox="0 0 372 252">
@@ -126,19 +127,19 @@
                             stroke-linejoin:round;
                             stroke-miterlimit:10}
                         </style>
-                        <path id="XMLID_451_" class="ht0" d="M366 6l-60 60H186l60-60h102z"/>
-                        <path id="XMLID_450_" class="ht0" d="M186 66H66L6 6h120z"/>
-                        <path id="XMLID_449_" class="ht1" d="M246 6l-60 60V42l36-36z"/>
-                        <path id="XMLID_448_" class="ht1" d="M222 168.8l6 17.2-42 60v-25.7z"/>
-                        <path id="XMLID_447_" class="ht2" d="M195 91.7l27 77.1-36 51.5L162 186l5.6-16 18.4-52.6z"/>
-                        <path id="XMLID_446_" class="ht2" d="M222 6l-36 36-36-36z"/>
-                        <path id="XMLID_445_" class="ht3" d="M186 66l9 25.7-9 25.7z"/> 1.7
-                        <path id="XMLID_444_" class="ht3" d="M186 222v24l-42-60 5.6-16L186 66v51.4L167.6 170l-5.6 16 24 34.3z"/>
-                        <path id="XMLID_443_" class="ht3" d="M186 42v24L126 6h24z"/>
-                        <path id="XMLID_441_" class="ht4" d="M246 6H126"/>
-                        <path id="XMLID_440_" class="ht4" d="M126 6H6l60 60h120z"/>
-                        <path id="XMLID_439_" class="ht4" d="M246 6h120l-60 60H186z"/>
-                        <path id="XMLID_438_" class="ht4" d="M186 66l-36.4 104-5.6 16 42 60 42-60-5.6-16L195 91.7z"/>
+                        <path class="ht0" d="M366 6l-60 60H186l60-60h102z"/>
+                        <path class="ht0" d="M186 66H66L6 6h120z"/>
+                        <path class="ht1" d="M246 6l-60 60V42l36-36z"/>
+                        <path class="ht1" d="M222 168.8l6 17.2-42 60v-25.7z"/>
+                        <path class="ht2" d="M195 91.7l27 77.1-36 51.5L162 186l5.6-16 18.4-52.6z"/>
+                        <path class="ht2" d="M222 6l-36 36-36-36z"/>
+                        <path class="ht3" d="M186 66l9 25.7-9 25.7z"/> 1.7
+                        <path class="ht3" d="M186 222v24l-42-60 5.6-16L186 66v51.4L167.6 170l-5.6 16 24 34.3z"/>
+                        <path class="ht3" d="M186 42v24L126 6h24z"/>
+                        <path class="ht4" d="M246 6H126"/>
+                        <path class="ht4" d="M126 6H6l60 60h120z"/>
+                        <path class="ht4" d="M246 6h120l-60 60H186z"/>
+                        <path class="ht4" d="M186 66l-36.4 104-5.6 16 42 60 42-60-5.6-16L195 91.7z"/>
                     </symbol>
 
                     <symbol id="logo--at-home" viewBox="0 0 372 252">
@@ -154,19 +155,19 @@
                             stroke-linejoin:round;
                             stroke-miterlimit:10}
                         </style>
-                        <path id="XMLID_451_" class="st0" d="M366 6l-60 60H186l60-60h102z"/>
-                        <path id="XMLID_450_" class="st0" d="M186 66H66L6 6h120z"/>
-                        <path id="XMLID_449_" class="st1" d="M246 6l-60 60V42l36-36z"/>
-                        <path id="XMLID_448_" class="st1" d="M222 168.8l6 17.2-42 60v-25.7z"/>
-                        <path id="XMLID_447_" class="st2" d="M195 91.7l27 77.1-36 51.5L162 186l5.6-16 18.4-52.6z"/>
-                        <path id="XMLID_446_" class="st2" d="M222 6l-36 36-36-36z"/>
-                        <path id="XMLID_445_" class="st3" d="M186 66l9 25.7-9 25.7z"/> 1.7
-                        <path id="XMLID_444_" class="st3" d="M186 222v24l-42-60 5.6-16L186 66v51.4L167.6 170l-5.6 16 24 34.3z"/>
-                        <path id="XMLID_443_" class="st3" d="M186 42v24L126 6h24z"/>
-                        <path id="XMLID_441_" class="st4" d="M246 6H126"/>
-                        <path id="XMLID_440_" class="st4" d="M126 6H6l60 60h120z"/>
-                        <path id="XMLID_439_" class="st4" d="M246 6h120l-60 60H186z"/>
-                        <path id="XMLID_438_" class="st4" d="M186 66l-36.4 104-5.6 16 42 60 42-60-5.6-16L195 91.7z"/>
+                        <path class="st0" d="M366 6l-60 60H186l60-60h102z"/>
+                        <path class="st0" d="M186 66H66L6 6h120z"/>
+                        <path class="st1" d="M246 6l-60 60V42l36-36z"/>
+                        <path class="st1" d="M222 168.8l6 17.2-42 60v-25.7z"/>
+                        <path class="st2" d="M195 91.7l27 77.1-36 51.5L162 186l5.6-16 18.4-52.6z"/>
+                        <path class="st2" d="M222 6l-36 36-36-36z"/>
+                        <path class="st3" d="M186 66l9 25.7-9 25.7z"/>
+                        <path class="st3" d="M186 222v24l-42-60 5.6-16L186 66v51.4L167.6 170l-5.6 16 24 34.3z"/>
+                        <path class="st3" d="M186 42v24L126 6h24z"/>
+                        <path class="st4" d="M246 6H126"/>
+                        <path class="st4" d="M126 6H6l60 60h120z"/>
+                        <path class="st4" d="M246 6h120l-60 60H186z"/>
+                        <path class="st4" d="M186 66l-36.4 104-5.6 16 42 60 42-60-5.6-16L195 91.7z"/>
                     </symbol>
                 </svg>
                 <!-- use the symbols here -->
